--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 body{
     font-family: sans-serif;
+    background-color: #FFFFFF;
 }
 
 /* --------- header--------- */
@@ -17,6 +18,7 @@ body{
     height: 698px;
     margin: 0 auto;
     background-image: url(Assets/Hero-bg.png);
+    background-repeat: no-repeat;
 }
 
 .container{
@@ -40,15 +42,14 @@ body{
 .logo{
     color: #4E47FF;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2.2em;
     width: 99px;
     height: 51px;
-    line-height: 150%;
 }
-.button-style {
+.sign-up-btn {
     background-color: #4E47FF;
     color: #FFFFFF;
-    padding: 10px 50px;
+    padding: 15px 50px;
     border:none;
     border-radius: 10px;
     outline: none;
@@ -86,3 +87,54 @@ body{
 /* --------------------- */
 
 
+/*<<<-------- main--------->>> */
+
+
+/* --------section action---- */
+.action{
+    width: 1140px;
+    height: 328px;
+    margin: 60px auto;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+}
+
+.action-info{
+width: 517px;
+height: 203px;
+margin: auto 0 ;
+display: flex;
+text-align: start;
+flex-direction: column;
+gap: 20px;
+}
+
+.action-info h2 {
+    font-size: 2.5em;
+    font-weight: 700;
+
+}
+.action-info p {
+    font-size: 20px;
+    line-height: 30px;
+    font-size: 21px;
+    color: rgba(0 ,0,0,0.898);
+    width: 517px;
+}
+.action-info button{
+    background-color: #4E47FF;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+}
+
+.action-img img{
+    width: 403px ;
+    height: 328px;
+    border-radius: 40px;
+}
+/* ------------------ */
