--- a/style.css
+++ b/style.css
@@ -1,332 +1,311 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: "Inter", sans-serif;
-    background-color: #f5f8ff;
-    max-width: 1440px;
-    margin: 0 auto;
+body {
+  font-family: "Inter", sans-serif;
+  background-color: #f5f8ff;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 /* --------- header--------- */
-.header{
-    width: 1440px;
-    height: 698px;
-    margin: 0 auto;
-    background-image: url(Assets/Hero-bg.png);
-    background-repeat: no-repeat;
+.header {
+  width: 1440px;
+  height: 698px;
+  margin: 0 auto;
+  background-image: url(Assets/Hero-bg.png);
+  background-repeat: no-repeat;
 }
 
-.container{
-    width: 1140px;
-    height: 546px;
-    display: flex;
-    gap: 100px;
-    flex-direction: column;
-    margin: 0 auto auto auto;
+.container {
+  width: 1140px;
+  height: 546px;
+  display: flex;
+  gap: 100px;
+  flex-direction: column;
+  margin: 0 auto auto auto;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 40px 0px ;
-    height: 100px;
-
-
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 40px 0px;
+  height: 100px;
 }
-.logo{
-    color: #4E47FF;
-    font-weight: bold;
-    font-size: 2.2em;
-    width: 99px;
-    height: 51px;
+.logo {
+  color: #4e47ff;
+  font-weight: bold;
+  font-size: 2.2em;
+  width: 99px;
+  height: 51px;
 }
 .sign-up-btn {
-    background-color: #4E47FF;
-    color: #FFFFFF;
-    padding: 15px 50px;
-    border:none;
-    border-radius: 10px;
-    outline: none;
-    font-family: "Inter", sans-serif;
-    font-weight: 500;
-    font-size: 1.1em;
-
+  background-color: #4e47ff;
+  color: #ffffff;
+  padding: 15px 50px;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 1.1em;
 }
-.hero{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 905px;
-    height: 295px;
-    margin: 0 auto;
-    bottom: 0px;
-    gap: 50px;
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 905px;
+  height: 295px;
+  margin: 0 auto;
+  bottom: 0px;
+  gap: 50px;
 }
-.hero p{
-    font-size: 4em;
-    text-align: center;
-    font-weight: bold;
-    color: #252432;
+.hero p {
+  font-size: 4em;
+  text-align: center;
+  font-weight: bold;
+  color: #252432;
 }
-.hero-btn{
-    height: 48px;
-    width: 174px;
-    padding: 10px;
-    color: #FFFFFF;
-    border-radius: 8px;
-    border: none;
-    background-color: #4E47FF;
-    font-family: "Inter", sans-serif;
+.hero-btn {
+  height: 48px;
+  width: 174px;
+  padding: 10px;
+  color: #ffffff;
+  border-radius: 8px;
+  border: none;
+  background-color: #4e47ff;
+  font-family: "Inter", sans-serif;
 }
-/* --------------------- */
-
 
 /*<<<-------- main--------->>> */
-
-
 /* --------section action---- */
-.action{
-    width: 1140px;
-    height: 328px;
-    margin: 60px auto;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
+.action {
+  width: 1140px;
+  height: 328px;
+  margin: 60px auto;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
 }
 
-.action-info{
-width: 517px;
-height: 203px;
-margin: auto 0 ;
-display: flex;
-text-align: start;
-flex-direction: column;
-gap: 20px;
+.action-info {
+  width: 517px;
+  height: 203px;
+  margin: auto 0;
+  display: flex;
+  text-align: start;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .action-info h2 {
-    font-size: 2.5em;
-    font-weight: 700;
-
+  font-size: 2.5em;
+  font-weight: 700;
 }
 .action-info p {
-    font-size: 20px;
-    line-height: 30px;
-    font-size: 21px;
-    color: rgba(0 ,0,0,0.898);
-    width: 517px;
+  font-size: 20px;
+  line-height: 30px;
+  font-size: 21px;
+  color: rgba(0, 0, 0, 0.898);
+  width: 517px;
 }
-.action-info button{
-    background-color: #4E47FF;
-    color: #FFFFFF;
-    padding: 20px;
-    width: 200px;
-    font-weight: bold;
-    border: none;
-    border-radius: 10px;
-    font-family: "Inter", sans-serif;
+.action-info button {
+  background-color: #4e47ff;
+  color: #ffffff;
+  padding: 20px;
+  width: 200px;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  font-family: "Inter", sans-serif;
 }
-
-.action-img img{
-    width: 403px ;
-    height: 328px;
-    border-radius: 40px;
+.btn-hover:hover {
+  background: linear-gradient(to right, #fcef64, #f4d941);
+  color: black;
+  cursor: pointer;
+  transform: scaleY(1.25) scaleX(1.05);
 }
-/* ------------------ */
-
+.action-img img {
+  width: 403px;
+  height: 328px;
+  border-radius: 40px;
+}
 
 /* section user-details */
-.user-container{
-    background-color:#e5e7ff ;
-    max-width: 1140px;
-    height: 310px;
-    margin: 100px auto;
-    display: flex;
-    flex-direction: column;
-    border-radius:20px ;
+.user-container {
+  background-color: #e5e7ff;
+  max-width: 1140px;
+  height: 310px;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
 }
 
-.user-details{
-    width: 856px;
-    height: 200px;
-    gap: 40px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
+.user-details {
+  width: 856px;
+  height: 200px;
+  gap: 40px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+.user-status {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.user-details-title {
+  text-align: center;
+  font-size: 1.4em;
+  font-weight: bold;
+}
 
+.first-status {
+  font-size: 60px;
+  font-weight: bold;
+  color: #4e47ff;
 }
-.user-status{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.user-details-title{
-text-align: center;
-font-size: 1.4em;
-font-weight: bold;
-}
-
-.first-status{
-    font-size: 60px;
-    font-weight: bold;
-    color: #4E47FF;
-
-}
-.second-status{
-    font-weight: 100;
-    color:black;
-    font-family: sans-serif;
+.second-status {
+  font-weight: 100;
+  color: black;
+  font-family: sans-serif;
 }
 
 /* section feedback */
-.feedback-section{
-    max-width: 1140px;
-    height: 400px;
-    margin: auto;
-    background-color:#f5f8ff ;
+.feedback-section {
+  max-width: 1140px;
+  height: 400px;
+  margin: auto;
+  background-color: #f5f8ff;
 }
-.feedback-title{
-    text-align: center;
-    font-size:3.5em ;
-    padding-bottom: 20px;
-
+.feedback-title {
+  text-align: center;
+  font-size: 3.5em;
+  padding-bottom: 20px;
 }
-.feedback-container{
-    height: 300px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.feedback-container {
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.feedback-card{
-background-color:#e5e7ff ;
-border-radius: 15px;
-width: 300px;
-height:200px ;
-padding: 30px;
+.feedback-card {
+  background-color: #e5e7ff;
+  border-radius: 15px;
+  width: 300px;
+  height: 200px;
+  padding: 30px;
 }
-.rating-feedback img{
-    padding: 10px 5px;
-
+.rating-feedback img {
+  padding: 10px 5px;
 }
-.reviewer h2{
-    font-size: 1.5em;
-    padding-bottom: 10px;
+.reviewer h2 {
+  font-size: 1.5em;
+  padding-bottom: 10px;
 }
-.feedback-text p{
-    font-size: 20px;
-    width: fit-content;
-    font-weight: 200;
-    padding-bottom: 10px;
+.feedback-text p {
+  font-size: 20px;
+  width: fit-content;
+  font-weight: 200;
+  padding-bottom: 10px;
 }
-.reviewer-details{
-    display: flex;
-    gap: 15px;
-    padding-top:10px ;
-
+.reviewer-details {
+  display: flex;
+  gap: 15px;
+  padding-top: 10px;
 }
 
-.reviewer-details img{
-    height: 40px ;
-    width: 40px;
-    border-radius:40px ;
+.reviewer-details img {
+  height: 40px;
+  width: 40px;
+  border-radius: 40px;
 }
-.reviewer-name{
-    font-weight: 700;
+.reviewer-name {
+  font-weight: 700;
 }
-/* -------------------------- */
-
 
 /* input section */
-.input-section{
-    max-width: 1140px;
-    margin: 80px auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 60px 0px;
+.input-section {
+  max-width: 1140px;
+  margin: 80px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 0px;
 }
-.input-title{
-    font-weight: bold;
-    font-size: 4em;
-
+.input-title {
+  font-weight: bold;
+  font-size: 4em;
 }
-.input-form{
-display: flex;
-flex-direction: column;
-width: 500px;
-height: 500px;
-
+.input-form {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 500px;
 }
-.input-form input{
-    padding: 30px;
-    outline: none;
-    font-family: "Inter", sans-serif;
-    border: none;
-    border-radius: 10px;
+.input-form input {
+  padding: 30px;
+  outline: none;
+  font-family: "Inter", sans-serif;
+  border: none;
+  border-radius: 10px;
 }
-.input-form textarea{
-outline: none;
-border: none;
-border-radius: 10px;
-resize: none;
+.input-form textarea {
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  resize: none;
 }
-.input-form label{
-    font-size: 1.5em;
-    padding: 10px 0px;
-    font-weight: 700;
-    text-align: start;
+.input-form label {
+  font-size: 1.5em;
+  padding: 10px 0px;
+  font-weight: 700;
+  text-align: start;
 }
-.get-touch{
-    background-color: #4E47FF;
-    color: #FFFFFF;
-    padding: 20px 0px;
-    margin-top: 20px;
-    font-weight: 600;
-    border: none;
-    border-radius: 10px;
-    font-family: "Inter", sans-serif;
+.get-touch {
+  background-color: #4e47ff;
+  color: #ffffff;
+  padding: 20px 0px;
+  margin-top: 20px;
+  font-weight: 600;
+  border: none;
+  border-radius: 10px;
+  font-family: "Inter", sans-serif;
 }
-/* -------------------------------- */
 
-
-
-
-.footer-section{
-    background-color: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 150px;
-    gap: 30px;
-
+/*<<<<<------- footer section------>>>> */
+.footer-section {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 150px;
+  gap: 30px;
 }
 .footer-section ul {
-    list-style: none;
-    display: flex;
-    gap: 50px;
-    text-transform: capitalize;
-    font-weight: 300;
-    font-size: 25px;
-
+  list-style: none;
+  display: flex;
+  gap: 50px;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 25px;
+  cursor: pointer;
 }
-.logo-2{
-    color: #4E47FF;
-    font-weight: bold;
-    font-size: 6em;
-
+.logo-2 {
+  color: #4e47ff;
+  font-weight: bold;
+  font-size: 6em;
 }
 .footer-section p {
-    font-size: 24px;
-    font-weight: 300;
-
+  font-size: 24px;
+  font-weight: 300;
 }
+
+/* <<<<------------------>>>> */
