--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ body {
   color: black;
   cursor: pointer;
   transform: scaleY(1.25) scaleX(1.05);
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.45);
 }
 .action-img img {
   width: 403px;
@@ -230,10 +231,49 @@ body {
   font-weight: 700;
 }
 
+/* <<<<<<----extra section---->>>> */
+
+.extra-section{
+    width: 1140px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 0 auto;
+    margin-top: 90px;
+    background-color: #ffffff;
+    border-radius: 20px;
+
+}
+.extra-section img{
+    width: 840px;
+    height: 365px;
+    margin: auto;
+    margin-bottom: 50px;
+    border-radius: 50px;
+}
+.extra-section h2{
+  font-size: 50px;
+  font-weight: bold;
+  padding-top: 50px;
+}
+.extra-section button{
+  background-color: #4e47ff;
+  color: #ffffff;
+  padding: 20px;
+  width: 200px;
+  font-weight: bold;
+  border: none;
+  border-radius: 10px;
+  font-family: "Inter", sans-serif;
+  margin: 0 auto;
+}
+
 /* input section */
 .input-section {
   max-width: 1140px;
-  margin: 80px auto;
+  margin: 90px auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
